# AVIS-Engine-Python-API

./: .coveragerc  .gitignore  AVISEngine.py  Example.py  LICENSE  MANIFEST.in  README.md  avisengine.py  config.py  example.py  netmq.cs  pyproject.toml  requirements.txt  setup.py  setup_dev.sh  tox.ini  utils.py  zmq_test.py
.github/workflows/: python-tests.yml
ZMQ Examples/: CarServerMQ.cs  zmq_client.py
ZMQ Examples/IMU/: IMU.cs
ZMQ Examples/LIDAR/: LIDAR.cs  pointcloud.py
docs/: README.md
src/avisengine/: __init__.py  avisengine.py  config.py  utils.py
tests/: example.py  test_car.py
