[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "avisengine"
version = "0.1.3"
description = "Python API for AVIS Engine Simulator - A robust simulation platform for autonomous vehicle development"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["autonomous", "vehicle", "simulator", "engine", "avis"]
authors = [
    {name = "Amirmohammad Zarif", email = "amirmohammadzarif@avisengine.com"}
]

[project.urls]
Homepage = "https://avisengine.com"
Documentation = "https://docs.avisengine.com"
Repository = "https://github.com/AvisEngine/AVIS-Engine-Python-API"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=avisengine --cov-report=term-missing"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
